src/components/layout/layout.module.scss
@import "../../styles/settings.scss";

section {
    max-width: 1000px;
    min-height: 100vh;
    width: 90%;
}

aside {
    background: $mediumGrey;
    border-radius: 0 5px 5px 0;
    box-shadow: 0px 0px 0px rgba($shadowGrey, 0);
    display: none;
    left: 0%;
    padding: 10px 15px;
    position: fixed;
    top: 30%;
    transition: padding 200ms ease-in-out, box-shadow 200ms ease-in-out;
    z-index: 1;
    &:hover {
        box-shadow: 5px 5px 5px rgba($shadowGrey, 0.8);
        padding: 20px;
    }
}

.intro {
    @include flex(column, center);
    padding-top: $headerHeight;
    h1, h2, h3 {
        margin: 10px auto;
        text-align: center;
    }
    h1 {
        margin-top: -50px;
        font-size: 2.4rem;
    }
    h2 {
        color: $accentWhite;
        font-size: 1.4rem;
    }
    // h3 {
    //     font-size: 1.2rem;
    //     text-transform: uppercase;
    // }
    svg {
        animation-duration: 2s;
        animation-iteration-count: infinite;
        color: $accentWhite;
        display: block;
        font-size: 2.4rem;
        margin: 20px auto;
        transform-origin: bottom;
    }
    .bounce {
        animation-name: bounce;
        animation-timing-function: ease-in-out;
    }
    @keyframes bounce {
        0% { transform: translateY(0); }
        50% { transform: translateY(20px); }
        100% { transform: translateY(0); }
    }
}

.about {
    margin-bottom: 40px;
    h2 {
        font-size: 2rem;
        margin: 0 0 20px 0;
    }
    h3 {
        color: $lightBlue;
        font-size: 1.1rem;
        margin: 20px auto 10px;
    }
    img {
        border-radius: 5px;
        display: block;
        margin: 0 auto 10px;
        max-width: 400px;
        width: 100%;
    }
    p {
        font-size: 0.95rem;
        line-height: 22px;
        margin: 0 auto 10px;
    }
    .toolsContainer {
        @include flex(row, flex-start);
        flex-wrap: wrap;
        margin: 0 auto;
        a {
            margin: 10px auto;
            width: 80%;
        }
    }
}

.portfolio {
    h2 {
        font-size: 2rem;
        margin-bottom: 20px;
    }
    .projectContainer {
        .project {
            width: 100%;
            h3 {
                font-size: 1.4rem;
                margin: 20px 0 10px;
            }
            .mobileImgContainer {
                border: 3px solid rgb(0,0,0);
                border-radius: 5px;
                height: 90vw;
                max-height: 372px;
                overflow: hidden;
                img {
                    max-width: 372px;
                    width: 100%;
                }
            }
            svg {
                color: $accentWhite;
                font-size: 1.6rem;
                margin: 10px 8px 0 2px;
            }
            .infoBtn {
                color: $lightBlue;
                cursor: pointer;
                float: right;
                font-size: 1.1rem;
                margin: 5px 0 0 0;
                svg {
                    color: $lightBlue;
                    font-size: 1.2rem;
                    margin: 8px 0 -2px 4px;
                }
            }
            .moreInfoContainer {
                @include flex (column, space-evenly);
                background: $mediumGrey;
                border: 3px solid rgb(0,0,0);
                border-radius: 5px;
                height: 90vw;
                padding: 10px;
                opacity: 1;
                position: absolute;
                top: 38px;
                transition: opacity 200ms ease-in-out;
                p {
                    margin: 0px auto 5px;
                }
                h3 {
                    color: $lightBlue;
                    font-size: 1.2rem;
                    margin: 5px 0 8px;
                }
                ul {
                    list-style: inside;
                    text-align: left;
                    li {
                        color: $accentWhite;
                        font-size: 0.9rem;
                        margin: 5px 0 0 15px;
                        
                    }
                }
            }
            .hide {
                opacity: 0;
            }
        }
    }
}

.contact {
    margin: 30px auto;
    min-height: calc(100vh - 320px);
    h2 {
        font-size: 2.2rem;
    }
    h3 {
        font-size: 1.4rem;
        margin: 10px auto;
    }
    p {
        font-size: 0.95rem;
        line-height: 22px;
        margin: 10px auto 20px;
        a {
            color: $lightBlue;
            margin: 10px 0 10px 4px;
        }
    }
    
}

@media (min-width: 769px) and (min-height: 481px) {
    section {
        width: 80%;
    }

    aside {
        display: inline-block;
    }

    .contact {
        min-height: calc(100vh - 260px);
    }
}

@media (min-width: 768px), (max-height: 480px) {
    .about {
        h2 {
            font-size: 2.2rem;
            margin: 0 0 20px 0;
        }
        h3 {
            font-size: 1.4rem;
            margin: 50px 0 0;
        }
        img {
            display: inline;
            float: left;
            margin: 0 20px 20px 0;
            width: 280px;
        }
        p {
            font-size: 1.1rem;
            line-height: 24px;
            margin: 0 0 20px 0;
        }
        .toolsContainer {
            a {
                margin: 30px 20px 0 0;
                width: 210px; 
            }
        }
    }

    .portfolio {
        h2 {
            font-size: 2.2rem;
            margin-bottom: 0px;
        }
        .projectContainer {
            @include flex(row, space-between);
            flex-wrap: wrap;
            .project {
                margin: 0 20px 0 0;
                width: 280px;
                .mobileImgContainer {
                    height: 280px;
                }
                .moreInfoContainer {
                    height: 280px;
                    top: 58px;
                     p {
                        font-size: 0.9rem;
                    }
                    h3 {
                        font-size: 1.1rem;
                    }
                }
            }
        }
    }

    .contact {
        h2 {
            font-size: 2.2rem;
        }
        h3 {
            font-size: 1.5rem;
            margin: 20px auto 10px;
        }
        p {
            font-size: 1.1rem;
            line-height: 24px;
            margin: 10px auto 20px;
            a {
                margin: 10px 0 10px 4px;
            }
        }
    }
}

@media (min-width: 1024px) {
    .about {
        h2 {
            margin: 0 0 20px 0;
        }
    }
    .portfolio {
        h2 {
            margin: 0 0 20px 0;
        }
        .projectContainer {
            display: none;
        }
    }
}

